www/css/mobile.css
/* ... */
.ext-form-content h2 {
    margin-top: 1em;
}

.ext-form-content h3 {
    color: #555;
}

.ext-form-content p {
    color: #555;
    padding: 0 0.25em;
    text-shadow: none;
    margin: 2em 0;
    text-align: left;
}

/* override base.css margins */
.ext-form-content textarea {
    margin: 0px;
}

.ext-form-content > div:first-child > label:first-child,
.ext-form-content > label:first-child {
    margin-top: 0em;
}

.ext-form-content label {
    font-weight: normal;
    margin-top: 0.5em;
    padding-left: 0.5em;
}

.ext-form-content select,
.ext-form-content textarea,
.ext-form-content input {
    max-width: 100%;
    -webkit-border-radius: 10px;
    border-radius: 10px;
    padding-left: 0.5em;
}

.ext-form-content #save,
.ext-form-content #send_report {
    margin-top: 1em;
}

#form_detail {
    width: 100%;
    min-height: 8em;
}

#form_category {
    width: 100%;
}

#user-details {
    color: black;
    background-color: white;
    text-decoration: none;
    display: block;
    -webkit-border-radius: 10px;
    border-radius: 10px;
    text-align: center;
    padding: .6em 5px;
    border: 1px solid rgb(128,128,128);
}

.edit_details-info {
    font-size: 0.7em;
    opacity: 0.6;
}

.form-error {
    color: red;
}

.ext-photo-preview {
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    margin: auto;
    max-height: 60%;
    max-width: 100%;
}

#ajaxOverlay, #errorOverlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background: rgba(0, 0, 0, 0.6);
    z-index: 3000;
}

.spinner {
    margin: 60% auto 0 auto;
    height: 32px;
    width:32px;

    background-image: url(../img/ajax-loader.gif);
    background-size: 32px 32px;
    background-repeat: no-repeat;
    background-position: center center;
    border-radius: 50%;
    box-shadow: 0px 5px 20px #000;
}

ul.list  {
    margin-left: 0px;
}

.list li {
    list-style: none;
}

.list li a,
.list li a:active {
    text-decoration: none;
}

.bar-title [class*=button],
.bar-title .button-next:after,
.bar-title .button-prev:before {
    background: -webkit-linear-gradient(-90deg,rgb(65,108,199) 0%,rgb(32,77,165) 99%);
}

.button-gradient:after,
.button-gradient:before {
  -webkit-mask-image: -webkit-gradient(linear, left top, right bottom, from(#000), color-stop(.33, #000), color-stop(.5, transparent), to(transparent));
                  mask-image: gradient(linear, left top, right bottom, from(#000), color-stop(.33, #000), color-stop(.5, transparent), to(transparent));
}

.button-no-gradient {
    text-decoration: none !important;
    background-image: none !important;
    z-index: 1;
}

.button-no-gradient:after,
.button-no-gradient:before {
    background-image: none !important;
    background-color: #315db7;
    box-shadow: none !important;
    z-index: -1;
}

.button-no-gradient:active {
    box-shadow: none !important;
    padding-top: 5px;
    padding-bottom: 3px;
}
.bar-title .button-prev:active:before{
    border-left: none !important;
}

.bar-title [class*=button]:active,
.bar-title .button-prev:active,
.bar-title .button-next:active:after,
.bar-title .button-prev:active:before {
    background-image: none !important;
    background-color: #315db7;
}

/*.bar-title .button-prev:active:before,*/
.bar-title .button-prev:before {
    background-image: -webkit-gradient(linear, left bottom, right top, from(#204DA5), to(#416CC7));
}

